# awan

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  awan.json  release.sh
.github/workflows/: banner.yml  ci.yml  profile.yml  release.yml  web.yml
assets/: demo.tape
characters/: oyen.toml
clients/: README.md
clients/bash/: awan.sh
clients/go/: awan.go  go.mod
clients/python/: awan.py
crates/awan/: Cargo.toml  README.md
crates/awan-cli/: Cargo.toml
crates/awan-cli/src/: args.rs  main.rs
crates/awan-cli/tests/: cli.rs
crates/awan-core/: Cargo.toml
crates/awan-core/examples/: soccer_loop.rs
crates/awan-core/src/: awan.toml  character.rs  color.rs  companion.rs  grid.rs  halfblock.rs  icons.rs  lib.rs  palette.rs  play.rs  pose.rs  reel.rs  seamless.rs  spec.rs  sprites.rs  stage.rs  statusline.rs  tests.rs
crates/awan-core/src/karaoke/: mod.rs  panel.rs
crates/awan-core/src/scene/: bake.rs  campfire.rs  contributions.rs  dance.rs  gem.rs  greet.rs  hatch.rs  mod.rs  react.rs  rocket.rs  sleep.rs  soccer.rs  song.rs  stats.rs  street.rs  trophies.rs  wander.rs
crates/awan-core/src/spec/: validate.rs
crates/awan-render/: Cargo.toml
crates/awan-render/src/: lib.rs
crates/awan/src/: lib.rs
docs/: INTEGRATE.md  PROFILE.md
profile/: Cargo.toml  README.md  awan.json
profile/sample/: README.md  awan.json  project.json
profile/sample/.github/workflows/: awan.yml
profile/src/: draw.rs  gif.rs  icons.rs  main.rs  script.rs  shelf.rs  statsbanner.rs  story.rs  wall.rs
shell/: awan.zsh
tests/: protocol.sh
usage/: .gitignore  README.md
usage/bash/: README.md  run.sh
usage/go/: README.md  go.mod  main.go
usage/node/: README.md  index.js  package.json
usage/python/: README.md  main.py  requirements.txt
usage/rust/: Cargo.toml  README.md
usage/rust/src/: main.rs
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/crate/: Cargo.toml
web/crate/src/: layout.rs  lib.rs
web/src/: App.tsx  Caption.tsx  Identity.tsx  Meter.tsx  Output.tsx  Preview.tsx  SceneList.tsx  Shelf.tsx  acts.ts  overlays.ts  sample.ts  theme.css
web/src/character/: Canvas.tsx  Studio.tsx  Swatch.tsx  starters.ts
web/src/lib/: acts.ts  characters.ts  config.ts  engine.ts  example.ts  hues.ts  pixels.ts  sample.ts  spec.ts  store.ts  zip.ts
web/src/stage/: Meter.tsx  Reel.tsx  Stage.tsx  Transport.tsx  overlays.ts  text.ts
web/src/steps/: StepExport.tsx  StepIdentity.tsx  StepStory.tsx
web/src/story/: SceneList.tsx  SceneRow.tsx  Shelf.tsx
web/src/ui/: Button.tsx  Card.tsx  Code.tsx  Field.tsx  GithubMark.tsx  PixelIcon.tsx  SkinToggle.tsx  Stepper.tsx
