[package]
name = "awan-profile"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Profile GIF generator for awan — a separate, opt-in layer."
# Never published: this is the "for fun" profile generator, kept out of the
# core crates so releasing awan stays clean.
publish = false

[[bin]]
name = "awan-profile"
path = "src/main.rs"

[dependencies]
awan-core = { workspace = true }
image = { version = "0.25", default-features = false, features = ["gif", "png"] }
font8x8 = "0.3"
serde = { workspace = true }
serde_json = "1"
