[package]
name = "awan-cli"
description = "The awan command — the pixel character from your profile README, running in your terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "awan"
path = "src/main.rs"

[dependencies]
awan-core = { workspace = true }
awan-render = { workspace = true }
ctrlc = { workspace = true }
