[package]
name = "awan-core"
description = "The engine behind awan: deterministic pixel frames from (tick, character), with characters as TOML"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
