[package]
name = "awan"
description = "A tiny living character for your terminal — and a personality layer any CLI can embed (wait, ask, react)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
awan-core = { workspace = true }
awan-render = { workspace = true }
