[package]
name = "awan"
description = "Embed awan in your own Rust CLI: wait, ask, react"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
awan-core = { workspace = true }
awan-render = { workspace = true }
